### fix(Docker): fix and document dev docker build (HEAD -> feat/observability)
>Tue, 4 Jun 2024 16:16:53 +0200

>Author: Alexis Manin (alexis.manin@geomatys.com)

>Commiter: Alexis Manin (alexis.manin@geomatys.com)




### Added Slack support for contacting the administrator
>Mon, 3 Jun 2024 15:33:53 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix dockerfile
>Fri, 31 May 2024 09:19:48 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add "Enter" event to seach on a body Add information about formulas
>Thu, 30 May 2024 14:18:21 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### feat(GML): Added 2273 GML files, generated from 'result.wkts', using ApacheSIS.
>Thu, 30 May 2024 12:01:14 +0200

>Author: emuller (emuller@geomatys.com)

>Commiter: emuller (emuller@geomatys.com)




### feat(GML generator): Added missing identifier for OperationMethod - needed for GML validation.
>Thu, 30 May 2024 11:58:33 +0200

>Author: emuller (emuller@geomatys.com)

>Commiter: emuller (emuller@geomatys.com)




### Implements #6
>Thu, 30 May 2024 09:53:06 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### build(Docker): Added a Dockerfile-dev for testing purpose, which copies local files instead of cloning the remote repository.
>Thu, 23 May 2024 09:12:10 +0200

>Author: emuller (emuller@geomatys.com)

>Commiter: emuller (emuller@geomatys.com)




### fix(test): Added a method to test GML generation and changed 'make tests' to 'make test' as 'test' singular is more commonly used.
>Thu, 16 May 2024 11:00:12 +0200
