@@ -1,0 +1,20 @@
+name: planetary-crs-registry
+
+services:
+  api:
+    image: pdssp/planetary-crs-registry:latest
+    ports:
+      - 8080:8080
+    configs:
+      - source: api-conf
+        target: /conf/planet_crs_registry.conf
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/ping" ]
+      timeout: 5s
+
+configs:
+  api-conf:
+    content: |
+      [HTTP]
+      host=0.0.0.0
+      port=8080
